##############################################################

import("//react-native/common.gni")

config("LibFastImage_config") {
  cflags_cc = [ "-std=c++17"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
    "-Wno-ignored-qualifiers",
  ]

  include_dirs = [
     ".",
  ]
}

rns_cxx_tp_component("rnfastimage") {

  # Native module and its dependencies
  sources = [
    "FastImageViewModule.h",
    "FastImageViewModule.cpp",
  ]

  # Fabric Component and its dependencies
  sources += [
    "RSkComponentProviderFastImageView.cpp",
    "RSkComponentProviderFastImageView.h",
    "RSkComponentFastImageView.cpp",
    "RSkComponentFastImageView.h",
    "react/renderer/components/rnfastimage/ShadowNodes.cpp",
    "react/renderer/components/rnfastimage/ShadowNodes.h",
    "react/renderer/components/rnfastimage/Props.cpp",
    "react/renderer/components/rnfastimage/Props.h",
    "react/renderer/components/rnfastimage/EventEmitters.cpp",
    "react/renderer/components/rnfastimage/EventEmitters.h",
  ]

  public_configs = [ ":LibFastImage_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly",
    "//folly:async",
    "//skia",
    "//react-native/ReactCommon/react/renderer/core:core",
    "//third_party/libcurl:libcurl",
    "//react-native/ReactCommon/yoga",
    "//third_party/glog:glog",
    "//rns_shell",
    "//react-native/ReactCommon/jsi",
  ]

  with_exceptions = true
  with_rtti = true
}
